2007-02-12  Manuel Lopez-Ibanez  <manu@gcc.gnu.org>

	* alias.c (find_symbolic_term): Delete unused function.
	
2007-02-12  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (paritydi2, paritysi2): New expanders.
	(paritydi2_cmp, paritydi2_cmp): New insn and split patterns.
	(*parityhi2_cmp, *parityqi2_cmp): New insn patterns.

2007-02-12  Eric Botcazou  <ebotcazou@adacore.com>

	* tree.h (DECL_IGNORED_P): Document further effect for FUNCTION_DECL.
	* cgraphunit.c (cgraph_expand_function): If DECL_IGNORED_P is set on
	the function, temporarily point the debug interface to the null one.

2007-02-12  Eric Botcazou  <ebotcazou@adacore.com>

	* dwarf2out.c (round_up_to_align): New static function.
	(field_byte_offset): Use it to round the offset.

2007-02-12  Richard Henderson  <rth@redhat.com>

	* config/alpha/alpha.md (bswapsi2, bswapdi2): New.
	(inswl_const): Export.

2007-02-12  Richard Henderson  <rth@redhat.com>

	* calls.c (emit_library_call_value_1): If PROMOTE_MODE modifed the
	result mode of the libcall, convert back to outmode.

2007-02-12  Roger Sayle  <roger@eyesopen.com>

	* config/i386/i386.md (*bswapdi2_rex): Renamed from bswapdi2.
	(bswapdi2): New define_expand to implement 32-bit implementation.

2007-02-12  Nick Clifton  <nickc@redhat.com>

	* doc/invoke.texi (Overall Options): Document --help=.
	* gcc.c (target_help_flag): Rename to print_subprocess_flag.
	(cc1_options): Pass --help= on to cc1.
	(display_help): Add description of --help=.
	(process_command): Add code to handle --help=.  Allow translated
	--help and --target-help switches to be passed on to compiler
	sub-process.
	(main): Remove unused if statement.
	* opts.c (columns): Remove.
	(LEFT_COLUMN): Define.
	(wrap_help): Add columns argument.
	(print_filtered_help): Change parameters to be an include bitmask,
	an exclude bitmask, an any bitmask and the column width.  Move the
	code to display the params list here.  Add code to display the