@@ -1,3 +1,8 @@
+2007-02-13  Manuel Lopez-Ibanez  <manu@gcc.gnu.org>
+
+	PR c/29521
+	* c-typeck.c (c_finish_return): Improve warning message.
+
 2007-02-12  Manuel Lopez-Ibanez  <manu@gcc.gnu.org>
 
 	* alias.c (find_symbolic_term): Delete unused function.
